--- a/View/Add/AddFacultyAndSpecialtyAndCathedra.xaml
+++ b/View/Add/AddFacultyAndSpecialtyAndCathedra.xaml
@@ -2,8 +2,10 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:i="http://schemas.microsoft.com/xaml/behaviors" mc:Ignorable="d"
-        Title="Добавить связь факультет-специальность-кафедра">
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
+        mc:Ignorable="d"
+        Title="{Binding Path=TitleWindow, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -35,7 +37,7 @@
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
             <Label Grid.Row="0" HorizontalAlignment="Center" Style="{StaticResource AddWindow Header}">
                 <TextBlock TextWrapping="WrapWithOverflow"
-                           Text="Добавление связи факультет-специальность-кафедра"
+                           Text="{Binding Path=HeaderWindow, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                            Width="300"></TextBlock>
             </Label>
         </Grid>
@@ -123,7 +125,7 @@
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </Button>
-                <Button Name="Add" Style="{StaticResource AddWindow Add Button}" Command="{Binding Path=AddCommand}"></Button>
+                <Button Name="Add" Content="{Binding Path=AddButtonText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource AddWindow Add Button}" Command="{Binding Path=AddCommand}"></Button>
             </StackPanel>
         </Grid>
     </Grid>
