--- a/View/Add/AddWorker.xaml
+++ b/View/Add/AddWorker.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
-        Title="Добавить рабочего">
+        Title="{Binding Path=TitleWindow, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}">
 
     <!-- Connect static resources/styles/etc -->
     <Window.Resources>
@@ -35,7 +35,7 @@
 
         <!-- Header -->
         <Grid Grid.Row="0" Margin="0, 30, 0, 0">
-            <Label Grid.Row="0" HorizontalAlignment="Center" Content="Добавление рабочего" Style="{StaticResource AddWindow Header}"></Label>
+            <Label Grid.Row="0" HorizontalAlignment="Center" Content="{Binding Path=HeaderWindow, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource AddWindow Header}"></Label>
         </Grid>
 
         <!-- Main content -->
@@ -121,7 +121,7 @@
                         </i:EventTrigger>
                     </i:Interaction.Triggers>
                 </Button>
-                <Button Name="Add" Style="{StaticResource AddWindow Add Button}" Command="{Binding Path=AddCommand}"></Button>
+                <Button Name="Add" Content="{Binding Path=AddButtonText, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}" Style="{StaticResource AddWindow Add Button}" Command="{Binding Path=AddCommand}"></Button>
             </StackPanel>
         </Grid>
     </Grid>
