--- a/View/Add/AddClientCard.xaml
+++ b/View/Add/AddClientCard.xaml
@@ -90,7 +90,7 @@
                         </ComboBox>
                     </Grid>
                     <Grid>
-                        <DatePicker Name="DateGiven" FontFamily="{StaticResource Grandview Regular}" FontSize="10" Height="20" Width="100" Margin="0, 0, 0, 10" SelectedDate="{Binding Path=Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <DatePicker Name="DateGiven" FontFamily="{StaticResource Grandview Regular}" FontSize="10" Height="20" Margin="0, 0, 0, 10" SelectedDate="{Binding Path=Date, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         </DatePicker>
                     </Grid>
                 </StackPanel>
